# ouroboros-network

./: cabal.project
io-sim/src/Data/List/: Trace.hs
ouroboros-consensus-cardano-test/src/Test/ThreadNet/Infra/: ShelleyBasedHardFork.hs
ouroboros-consensus-cardano-test/src/Test/ThreadNet/TxGen/: Allegra.hs  Alonzo.hs  Cardano.hs  Mary.hs
ouroboros-network/: ouroboros-network.cabal
ouroboros-network-framework/: ouroboros-network-framework.cabal
ouroboros-network-framework/src/Simulation/Network/: Snocket.hs
ouroboros-network-framework/test/Test/Ouroboros/Network/: ConnectionManager.hs  Server2.hs
ouroboros-network-framework/test/Test/Ouroboros/Network/Server2/: ConnectionManager.hs  InboundGovernor.hs  Utils.hs
ouroboros-network/test/Test/Ouroboros/Network/: Testnet.hs
rgs-sandbox/: CHANGELOG.md  rgs-sandbox.cabal
rgs-sandbox/app/: HACKY.hs  Main.hs
rgs-sandbox/app/Embedded/Roundtrip/: EmbeddedCBOR.hs  Normal.hs  SerialisedCBOR.hs
